--- a/index.html
+++ b/index.html
@@ -11,28 +11,60 @@
       font-family:"Courier New", Courier, monospace;
       line-height:1.5;
     }
-    .wrap{ max-width:760px; margin:0 auto; padding:48px 20px; }
-    h1{ font-size:28px; margin:0 0 24px; font-weight:700; }
+    .wrap{
+      max-width:900px;
+      margin:0 auto;
+      padding:48px 20px;
+      display:flex;
+      gap:28px;
+      align-items:flex-start;
+    }
+    .content{ flex:1; text-align:left; }
+    h1{ font-size:28px; margin:0 0 24px; font-weight:700; text-align:center; }
     p{ margin:0 0 18px; }
     .label{ font-weight:700; }
     a{ color:inherit; }
+    .side{
+      width:240px;
+      position:sticky;
+      top:24px;
+      flex:0 0 240px;
+    }
+    .side img{
+      width:100%;
+      height:auto;
+      border-radius:8px;
+      display:block;
+    }
+    @media (max-width: 760px){
+      .wrap{ flex-direction:column; }
+      .side{ width:100%; position:static; flex:0 0 auto; }
+    }
   </style>
 </head>
 <body>
   <main class="wrap">
-    <h1>Welcome to the Silly Geese!</h1>
+    <section class="content">
+      <h1>Welcome to the Silly Geese!</h1>
 
-    <p><span class="label">What:</span> A not-for-profit organization dedicated to event based community building in Boulder, CO and the Front Range.</p>
+      <p><span class="label">What:</span> A not-for-profit organization dedicated to event based community building in Boulder, CO and the Front Range.</p>
 
-    <p><span class="label">How:</span></p>
+      <p><span class="label">How:</span></p>
 
-    <p><span class="label">Why:</span> We weren't meant to live like this. So many people today feel socially isolated. Let's build connections to create a strong and supportive community.</p>
+      <p><span class="label">Why:</span> We weren't meant to live like this. So many people today feel socially isolated. Let's build connections to create a strong and supportive community.</p>
 
-    <p><span class="label">When:</span></p>
+      <p><span class="label">When:</span></p>
 
-    <p><span class="label">Who:</span> YOU! Join the Whatsapp Group for event coordination, sign ups, etc.</p>
-    <!-- Replace # with your WhatsApp invite link -->
-    <p><a href="#" aria-label="Join the WhatsApp group">Join the WhatsApp Group</a></p>
+      <p><span class="label">Who:</span> YOU! Join the Whatsapp Group for event coordination, sign ups, etc.</p>
+
+      <!-- Replace # with your WhatsApp invite link -->
+      <p><a href="#" aria-label="Join the WhatsApp group">Join the WhatsApp Group</a></p>
+    </section>
+
+    <aside class="side" aria-label="Silly Geese gif">
+      <!-- Put your gif at /assets/goose.gif (or change the path) -->
+      <img src="assets/goose.gif" alt="Silly Geese gif">
+    </aside>
   </main>
 </body>
 </html>
