fix reference to goose gif

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <aside class="side" aria-label="Silly Geese gif">
       <!-- Put your gif at /assets/goose.gif (or change the path) -->
-      <img src="assets/goose.gif" alt="Silly Geese gif">
+      <img src="goose.gif" alt="Silly Geese gif">
     </aside>
   </main>
 </body>
