Add details and links

--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
     }
     .content{ flex:1; text-align:left; }
     h1{ font-size:28px; margin:0 0 24px; font-weight:700; text-align:center; }
+    h2{ font-size:22px; margin:32px 0 16px; }
     p{ margin:0 0 18px; }
     .label{ font-weight:700; }
     a{ color:inherit; }
+    .qr{
+      margin-top:12px;
+      max-width:220px;
+      display:block;
+    }
     .side{
       width:240px;
       position:sticky;
@@ -49,20 +55,40 @@
 
       <p><span class="label">What:</span> A not-for-profit organization dedicated to event based community building in Boulder, CO and the Front Range.</p>
 
-      <p><span class="label">How:</span></p>
+      <p><span class="label">Why:</span> So many people today feel socially isolated. We weren't meant to live like this. We belong in small, tight knit community groups where the people know and care for each other. Let's build connections to create a strong and supportive community.</p>
 
-      <p><span class="label">Why:</span> We weren't meant to live like this. So many people today feel socially isolated. Let's build connections to create a strong and supportive community.</p>
+      <p><span class="label">How:</span> We plan events!! Our objective is to create fun and safe spaces for likeminded people to meet, connect, and develop meaningful relationships.</p>
 
-      <p><span class="label">When:</span></p>
+      <p><span class="label">When/Where:</span> It’s up to you! Events will be planned all year at regular intervals. There will be many different types of events to ensure that there’s something for everyone. Where we go and what we do is open to suggestions!! Events currently being considered include new member meet up, trivia nights, hikes, ski trips, rock climbing days, and more! The current event itinerary can be found below.</p>
 
-      <p><span class="label">Who:</span> YOU! Join the Whatsapp Group for event coordination, sign ups, etc.</p>
+      <p>
+        <span class="label">Who:</span> YOU! 
+        <a href="https://chat.whatsapp.com/IYnbnQiPzv13uy1H4zbPXj" aria-label="Join the WhatsApp group">
+          Join the WhatsApp Group
+        </a> for event coordination, sign ups, etc.
+      </p>
 
-      <!-- Replace # with your WhatsApp invite link -->
-      <p><a href="#" aria-label="Join the WhatsApp group">Join the WhatsApp Group</a></p>
+      <!-- QR Code -->
+      <img src="IMG_3429.jpeg" alt="WhatsApp Group QR Code" class="qr">
+
+      <h2>Event Calendar</h2>
+
+      <p><strong>Yes Broke Boy (+Girls), Yes New Friends</strong> — new member meet-up! (We’re all new members. This is our first event!!)</p>
+
+      <p>Trivia night at Backcountry Pizza and Taphouse<br>
+      2319 Arapahoe Ave<br>
+      Boulder, CO 80302</p>
+
+      <p>April 8, 2026. Meet at 6:30 for trivia to begin at 7 pm!</p>
+
+      <p>
+        See <a href="https://www.geekswhodrink.com/venues/358160661/" target="_blank" rel="noopener">
+        event information</a>.
+      </p>
+
     </section>
 
     <aside class="side" aria-label="Silly Geese gif">
-      <!-- Put your gif at /assets/goose.gif (or change the path) -->
       <img src="goose.gif" alt="Silly Geese gif">
     </aside>
   </main>
